deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glue-connection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glue-connection
  template:
    metadata:
      labels:
        app: glue-connection
    spec:
      containers:
      - name: glue-connection
        image:  vijay165/glue_connection
        ports:
        - containerPort: 80
