service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glue-connection-service
spec:
  selector:
    app: glue-connection
  ports:
    - name: http
      protocol: TCP
      port: 8000
